# packages/backend/src/modules/users/dto/get-users-response.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { UserResponseDto } from './user-response.dto';
+
+export class GetUsersResponseDto {
+  @ApiProperty({ type: [UserResponseDto] })
+  result: UserResponseDto[];
+
+  @ApiProperty()
+  totalPages: number;
+
+  @ApiProperty()
+  totalItems: number;
+}
